style: add base structure with configured styles

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
+
+h1, h2, h3, h4 {
+  font-family: "BPG Nino Mtavruli", sans-serif;
+}
+
+p {
+  font-family: "BPG Arial", sans-serif;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
